# Social-evolution

./: .gitignore  CMakeLists.txt  README.md  Social-evolution.cpp  Social-evolution.h  Social-evolution.sln
Social-evolution/: CMakeLists.txt  Social-evolution.vcxproj
include/: Agent.hpp  Grid.hpp  GuiPanel.hpp  LeftPanel.hpp  Simulation.hpp  SimulationApp.hpp  SimulationRenderer.hpp  constants.hpp
src/: Agent.cpp  Grid.cpp  GuiPanel.cpp  LeftPanel.cpp  Simulation.cpp  SimulationApp.cpp  SimulationRenderer.cpp  main.cpp
